--- a/Shoot_Em_Up/Shoot_Em_Up.vcxproj
+++ b/Shoot_Em_Up/Shoot_Em_Up.vcxproj
@@ -158,6 +158,7 @@
     <ClInclude Include="Level.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Wall.h" />
+    <ClInclude Include="Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
